discussion/kv_engine/185468/185468_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: DCP test refactoring

Add configuration classes and configuration helpers for DCP producer
and stream creation.

Update the existing test harness functions to use the new configuration
paths so the existing tests work without changes.

Change-Id: Ie3c4c5ed2b64dd12f3c74ed3f2e5e56316dbf184

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-25 16:33:15.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-25 16:33:32.000000000
Message: 
Patch Set 6: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/334239/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-25 17:40:40.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/929/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_producer_config.h:38:10: error: no template named "shared_ptr" in namespace "std" [clang-diagnostic-error]
    std::shared_ptr<MockDcpProducer> createDcpProducer(
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_producer_config.h:55:17: error: implicit instantiation of undefined template "std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >" [clang-diagnostic-error]
    std::string name;
                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stringfwd.h:74:11: note: template is declared here
    class basic_string;
          ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/929/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_producer_config.h:38:10:
error: no template named "shared_ptr" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/929/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1114/ : FAILURE

Timeout of a CTest test 429/429 Test #193: ep-engine_ep_unit_tests.PersistentAndEphemeral/DcpStreamSyncReplTest ..........................................................} ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1114/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1227/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/160]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2328 Test failed: `" (Expected `287539" to be less than or equal to `278528" - Unexpected fileSize for vbucket)
[2023-01-25T16:46:15.260Z] (256 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1227/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/921/ : FAILURE

Compile error at [2023-01-25T17:20:13.506Z] ../kv_engine/engines/ep/tests/module_tests/dcp_producer_config.h:38:10:
error: no template named "shared_ptr" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/921/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/899/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22376/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/949/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/941/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/950/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/939/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/942/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
